# xwiimote

./: .gitignore  .gitmodules  BUTTONS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: device.rs  event.rs  io_blocker.rs  key.rs  lib.rs  monitor.rs
xwiimote-sys/: Cargo.toml  README.md  build.rs  wrapper.h
xwiimote-sys/src/: lib.rs
xwiimote-sys/xwiimote/lib/: core.c  xwiimote.h
