[package]
name = "xwiimote"
version = "0.1.0"
authors = ["Hugo Manrique <cargo@hugmanrique.me>"]
edition = "2021"
description = "Idiomatic Rust bindings to the xwiimote user-space library"
license = "MIT"
homepage = "https://github.com/hugmanrique/xwiimote"
documentation = "https://docs.rs/xwiimote"
repository = "https://github.com/hugmanrique/xwiimote"
readme = "README.md"
keywords = ["xwiimote", "bindings", "wrapper"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xwiimote-sys = { path = "xwiimote-sys", version = "0.1.3" }