[package]
name = "xwiimote"
version = "0.1.1"
authors = ["Hugo Manrique <cargo@hugmanrique.me>"]
edition = "2021"
description = "Idiomatic Rust bindings to the xwiimote user-space library"
license = "MIT"
homepage = "https://github.com/hugmanrique/xwiimote"
documentation = "https://docs.rs/xwiimote"
repository = "https://github.com/hugmanrique/xwiimote"
readme = "README.md"
keywords = ["xwiimote", "bindings", "wrapper"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
epoll-rs = "0.2.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
unix-ts = "0.4.1"
xwiimote-sys = { path = "xwiimote-sys", version = "0.1.3" }