[package]
name = "xwiimote"
version = "0.2.0"
authors = ["Hugo Manrique <cargo@hugmanrique.me>"]
edition = "2021"
description = "Idiomatic Rust bindings to the xwiimote user-space library"
license = "MIT"
homepage = "https://github.com/hugmanrique/xwiimote"
documentation = "https://docs.rs/xwiimote"
repository = "https://github.com/hugmanrique/xwiimote"
readme = "README.md"
keywords = ["xwiimote", "bindings", "wrapper"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
futures = "0.3"
libc = "0.2"
once_cell = "1.12"
num-derive = "0.3.3"
num-traits = "0.2.15"
signal-hook = "0.3"
xwiimote-sys = { path = "xwiimote-sys", version = "0.1.4" }
